# StepperMotorSpecsBasics.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
StepperMotorSpecsBasics/: __init__.py
tests/: tests.py
