[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "StepperMotorSpecsBasics"
readme = "ReadMe.md"
description = "Encodes relationships between quantities in different ways of connecting windings of a stepper motor"
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["StepperMotorSpecsBasics"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/StepperMotorSpecsBasics.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["StepperMotorSpecsBasics", "StepperMotorSpecsBasics.*"]

[tool.setuptools_scm]
